fix about page title spacing on mobile

--- a/src/inc_css/gallery.css
+++ b/src/inc_css/gallery.css
@@ -8,13 +8,6 @@
     transform: translate(-50%,0);
 }
 
-.portfolio h1 {
-    margin-top: 1.2em;
-    text-align: center;
-
-    padding: 0.2em 0.4em;
-}
-
 .portfolio p {
     margin: 1.2em 0 2em;
 
