--- a/src/inc_css/page.css
+++ b/src/inc_css/page.css
@@ -57,7 +57,8 @@
 
     font-size: 1.7em;
 
-    margin: .5em;
+    margin-top: 1.2em;
+    padding: 0.2em 0.4em;
 
     text-align: center;
 }
